# search-engine

./: .gitignore  README.md  pyproject.toml
src/searchengine/: __init__.py  schemas.py
src/searchengine/ab_testing/: __init__.py  runner.py
src/searchengine/api/: routes.py  service.py
src/searchengine/app/: __init__.py  main.py
src/searchengine/benchmarking/: __init__.py  dataset.py  offline_runner.py  report.py
src/searchengine/cli/: __init__.py  run_benchmark.py
src/searchengine/core/: __init__.py  config.py
src/searchengine/embeddings/: __init__.py  base.py  sentence_transformer.py
src/searchengine/evaluation/: __init__.py  metrics.py  runner.py
src/searchengine/generation/: __init__.py  grounded.py  llm.py
src/searchengine/ingestion/: __init__.py  chunking.py  loaders.py
src/searchengine/ranking/: __init__.py  base.py  strategies.py
src/searchengine/utils/: text.py
src/searchengine/vectorstore/: __init__.py  base.py  chroma_store.py
tests/: conftest.py  test_benchmark_report.py  test_chunking_and_ranking.py  test_evaluation_and_grounding.py  test_offline_benchmark.py
tests/fixtures/: ab_benchmark.json
