[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchengine"
version = "0.1.0"
description = "Production-grade AI search engine with retrieval, ranking, generation, and evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=2.7.0",
  "pypdf>=4.2.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
searchengine-benchmark = "searchengine.cli.run_benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
